--- a/bayesian_linear_regression.ipynb
+++ b/bayesian_linear_regression.ipynb
@@ -215,9 +215,14 @@
     "norm = 0\n",
     "\n",
     "def compute_pseudoinverse (X):\n",
+    "    ''' Computes the pseudoinverse required for computing the weight densities.'''\n",
+    "    \n",
     "    return np.matmul (la.inv (np.matmul (X.T, X)), X.T)\n",
     "\n",
     "def p (weights, mean):\n",
+    "    ''' Computes the weight densities according to a normal distribution\n",
+    "    with given mean and identity covariance matrix.'''\n",
+    "    \n",
     "    D = weights.shape[0]\n",
     "    covariance = 1\n",
     "    covariance_matrix = covariance*np.identity (D)\n",
@@ -227,6 +232,9 @@
     "    return coefficient * exponential\n",
     "\n",
     "def likelihood (data, mean):\n",
+    "    ''' Under i.i.d. sampling, computes the likelihood of obtaining the features and\n",
+    "    target values given a mean.'''\n",
+    "    \n",
     "    inputs = data['inputs']\n",
     "    outputs = data['outputs']\n",
     "    \n",
@@ -234,6 +242,9 @@
     "    return p (np.matmul (pseudoinverse, outputs), mean)\n",
     "\n",
     "def prior (mean):\n",
+    "    ''' Computes the prior distribution for the mean, under the assumption that it is normal\n",
+    "    with high covariance and zero mean.'''\n",
+    "    \n",
     "    D = mean.shape[0]\n",
     "    covariance = 1000\n",
     "    covariance_matrix = covariance*np.identity (D)\n",
@@ -244,6 +255,9 @@
     "    return coefficient * exponential\n",
     "\n",
     "def posterior (data, mean):\n",
+    "    ''' Using Bayes Theorem, computes the posterior distribution for the mean,\n",
+    "    by multiplying the likelihood and prior and normalizing.'''\n",
+    "    \n",
     "    def function (x):\n",
     "        x = np.array([mean[0],x])\n",
     "        return likelihood (data, x) * prior (x)\n",
@@ -253,6 +267,10 @@
     "    return norm * likelihood (data, mean) * prior (mean)\n",
     "\n",
     "def main ():\n",
+    "    ''' Lets x be uniformly distributed on [-10, 10], computes y = 5 + 3x, and generates\n",
+    "    a data set with features and target values. Uses Bayes Theorem to compute the appropriate\n",
+    "    mean for the weights. Plots the posterior mean densities.'''\n",
+    "    \n",
     "    inputs = np.array([[1, np.random.uniform(-10, 10)] for time in range (100)])\n",
     "    outputs = np.array([np.dot ([5, 3], x) for x in inputs])\n",
     "    data = {'inputs': inputs, 'outputs': outputs}\n",
