--- a/feedforward_neural_network.ipynb
+++ b/feedforward_neural_network.ipynb
@@ -429,6 +429,8 @@
     "import numpy.linalg as la\n",
     "\n",
     "def feedforward (network, data):\n",
+    "    '''Runs the feature inputs through the network to generate estimates for the target values.'''\n",
+    "    \n",
     "    inputs = data['inputs']\n",
     "    activations = network['activations']\n",
     "    weights = network['weights']\n",
@@ -454,12 +456,17 @@
     "    return estimates\n",
     "\n",
     "def error_function (network, data):\n",
+    "    '''Generates estimates for the target values, and returns an error given by the \n",
+    "    sum of squares error function.'''\n",
+    "    \n",
     "    estimates = feedforward (network, data)\n",
     "    outputs = data['outputs']\n",
     "    error = .5*(la.norm (estimates - outputs))**2\n",
     "    return error\n",
     "\n",
     "def set_weights (network, weights):\n",
+    "    '''Provides a mechanism for fixing the network weights using a weight vector.'''\n",
+    "    \n",
     "    num_inputs, num_hidden, num_outputs = network['dimensions']\n",
     "    \n",
     "    for input_num in range (num_inputs):\n",
@@ -474,6 +481,13 @@
     "            \n",
     "\n",
     "def main():\n",
+    "    ''' Generates features and target values by sampling from two uniform distributions on [-5,5]\n",
+    "    (say, for random variables x0 and x1) and setting y = 5*(x0-x1)**2 + 2*(x0+3*x1+1)**3 + 10.\n",
+    "    Feeds this data into the network to generate an error function in the space of weights.\n",
+    "    Uses basinhopping to minimize the error function to return appropriate weight values.\n",
+    "    Prints the final estimate for each set of features and the corresponding target value.'''\n",
+    "    \n",
+    "    \n",
     "    def f(x):\n",
     "        return x**3\n",
     "    \n",
