--- a/nearest_neighbors.ipynb
+++ b/nearest_neighbors.ipynb
@@ -23,6 +23,9 @@
     "from scipy.special import gamma\n",
     "\n",
     "def find_radius (x, X, K):\n",
+    "    ''' Grows a sphere centered on x until K points from the data set X are included.\n",
+    "    Returns the radius of the resulting sphere.'''\n",
+    "    \n",
     "    h = .001\n",
     "    n = x.shape[0]\n",
     "    radius = 0\n",
@@ -39,6 +42,9 @@
     "    return radius\n",
     "\n",
     "def find_volume (x, X, K):\n",
+    "    ''' Computes the volume of the smallest sphere centered on x that includes K points\n",
+    "    from the data set X.'''\n",
+    "    \n",
     "    n = len (x)\n",
     "    radius = find_radius (x, X, K)\n",
     "    volume = np.pi**(n/2) * radius ** n / gamma (1+n/2)\n",
@@ -46,24 +52,19 @@
     "\n",
     "    \n",
     "def compute_probability (x, X, K):\n",
+    "    ''' Approximates the probability mass surrounding the point x by assuming a constant\n",
+    "    probability density in the sphere surrounding x.'''\n",
+    "    \n",
     "    N = len (X)\n",
     "    V = find_volume (x, X, K)\n",
     "    p = K / (N*V)\n",
     "    return p\n",
     "\n",
-    "def classify (x, groups, K):\n",
-    "    X = groups.flatten()\n",
-    "    radius = find_radius (x, X, K)\n",
-    "    group_numbers = np.zeros (len(groups))\n",
-    "    identity = np.onehot (len(groups))\n",
-    "    for group_num in range (len (groups)):\n",
-    "        for point_num in range (len (groups[group_num])):\n",
-    "            if la.norm (x - groups[group_num][point_num]) < radius:\n",
-    "                group_numbers += identity [group_num]\n",
-    "    group_estimate = np.argmax (group_numbers)\n",
-    "    return group_estimate\n",
-    "\n",
     "def main(K):\n",
+    "    ''' Samples 1000 times from a normal distribution with mean 0 and variance 1. \n",
+    "    Estimates the density using the nearest neighbors method. Plots the true distribution\n",
+    "    and its approximation.'''\n",
+    "    \n",
     "    X = [np.random.normal() for time in range (1000)]\n",
     "    x_test = np.arange(-1,1,.01)\n",
     "    y_test = []\n",
