--- a/density_estimation.ipynb
+++ b/density_estimation.ipynb
@@ -2,60 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(-0.043866003629659985, 0.9098233671909098)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gaussian: 0.038260498854960835 1.0688015140103622\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Zhonghou/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:68: RuntimeWarning: divide by zero encountered in log\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def generate_gaussian (mean=0, sd=1):    \n",
-    "    X = [np.random.normal (mean, sd) for time in range (1000)]\n",
+    "def gaussian (x, mean, variance):\n",
+    "    ''' Computes the probability of obtaining x under a gaussian distribution with\n",
+    "    given mean and variance.'''\n",
+    "    \n",
+    "    return 1 / np.sqrt(2*np.pi*variance) * np.exp (1/2*((x-mean)/variance)**2)\n",
+    "\n",
+    "def generate_gaussian (mean=0, variance=1):\n",
+    "    ''' Samples 1000 times from a normal distribution.'''\n",
+    "    \n",
+    "    X = [np.random.normal (mean, np.sqrt(variance)) for time in range (1000)]\n",
     "    return X\n",
     "    \n",
     "def estimate_gaussian (X):\n",
+    "    ''' Uses maximum likelihood to estimate a mean and variance under a gaussian distribution.'''\n",
+    "    \n",
     "    sample_mean = sum(X) / len(X)\n",
     "    sample_variance = sum([(x - sample_mean)**2 for x in X]) / len (X)\n",
     "    \n",
     "    return sample_mean, sample_variance\n",
     "\n",
+    "def uniform (x, start, end):\n",
+    "    ''' Computes the probability of obtaining x under a uniform distribution.'''\n",
+    "    \n",
+    "    return 1/(end-start)\n",
+    "\n",
     "def generate_uniform (start=0, end=1):\n",
+    "    ''' Samples 1000 times from a uniform distribution.'''\n",
+    "    \n",
     "    X = [np.random.uniform (start, end) for time in range (1000)]\n",
     "    return X\n",
     "\n",
     "def estimate_uniform (X):\n",
+    "    ''' Uses maximum likelihood to compute a start and end under a uniform distribution.'''\n",
+    "    \n",
     "    sample_start = min (X)\n",
     "    sample_end = max (X)\n",
     "    \n",
     "    return sample_start, sample_end\n",
     "\n",
+    "def exponential (x, scale):\n",
+    "    ''' Computes the probability of obtaining x under an exponential distribution.'''\n",
+    "    \n",
+    "    if x < 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return scale*np.exp(-scale*x)\n",
+    "\n",
     "def generate_exponential (scale=1):\n",
+    "    ''' Samples 1000 times from an exponential distribution.'''\n",
+    "    \n",
     "    X = [np.random.exponential (scale) for time in range (1000)]\n",
     "    return X\n",
     "\n",
     "def estimate_exponential (X):\n",
+    "    ''' Uses maximum likelihood to compute a scale under an exponential distribution.'''\n",
+    "    \n",
     "    sample_scale = len (X) / sum (X)\n",
     "    return sample_scale\n",
     "\n",
     "def log_likelihood (distribution, X):\n",
+    "    ''' Computes the log likelihood given a distribution and a set of samples.'''\n",
+    "    \n",
     "    total = 0\n",
     "    for x in X:\n",
-    "        total += np.log (distribution (X))\n",
+    "        total += np.log (distribution (x))\n",
+    "    return total\n",
     "\n",
     "def main():\n",
+    "    ''' Generates a data set under some distribution. Uses maximum likelihood to determine\n",
+    "    the distribution of best fit.'''\n",
+    "    \n",
     "    X = generate_gaussian ()\n",
-    "    return estimate_gaussian (X)\n",
+    "    \n",
+    "    mean, variance = estimate_gaussian (X)\n",
+    "    start, end = estimate_uniform (X)\n",
+    "    scale = estimate_exponential (X)\n",
+    "    \n",
+    "    def g(x):\n",
+    "        return gaussian (x, mean, variance)\n",
+    "    def u(x):\n",
+    "        return uniform (x, start, end)\n",
+    "    def e(x):\n",
+    "        return exponential (x, scale)\n",
+    "    \n",
+    "    distributions = [g, u, e]\n",
+    "    \n",
+    "    max_function = None\n",
+    "    max_ll = -1000\n",
+    "    for distribution in distributions:\n",
+    "        if log_likelihood (distribution, X) > max_ll:\n",
+    "            max_function = distribution\n",
+    "    \n",
+    "    if max_function == g:\n",
+    "        print ('Gaussian:', mean, variance)\n",
+    "    if max_function == u:\n",
+    "        print ('Uniform:', start, end)\n",
+    "    if max_function == e:\n",
+    "        print ('Exponential:', scale)\n",
+    "    \n",
     "\n",
     "main()"
    ]
